--- a/src/components/HeaderBootstrap/index.css
+++ b/src/components/HeaderBootstrap/index.css
@@ -43,7 +43,7 @@ header.rolagem #nav-links{
 #nav-links {
   color: #fff;
   font-size:1.4rem;
-  text-shadow: 0px 0px 5px black;
+  text-shadow: 0px 0px 5px #0a3758;
   border-top: 3px solid transparent;
   border-bottom: 3px solid transparent;
   transition: all 0.2s ease-in-out;
@@ -52,18 +52,18 @@ header.rolagem #nav-links{
 #nav-links:hover {
   color: #fff;
   border-top: 3px solid transparent;
-  border-bottom: 3px solid #175264;
+  border-bottom: 3px solid #0a3758;
 }
 
 header.rolagem #nav-links{
   text-shadow: none;
-  color: #175264;
+  color: #0a3758;
 }
 
 header.rolagem #nav-links:hover{  
-  color:#ff6e3d;
+  color:#dab4d1;
   border-top: 3px solid transparent;
-  border-bottom: 3px solid #ff6e3d;
+  border-bottom: 3px solid #dab4d1;
 }
 
 #btn {
@@ -93,13 +93,13 @@ header.rolagem #nav-links:hover{
 header.rolagem #btn{
   border: 1px solid #C4C4CC;
   text-shadow: none;
-  color: #175264;
+  color: #0a3758;
 }
 
 header.rolagem #btn:hover{
-  border: 1px solid #ff6e3d;
+  border: 1px solid #dab4d1;
   text-shadow: none;
-  color: #ff6e3d;
+  color: #dab4d1;
 }
 .img {
   width: 9rem;
@@ -123,7 +123,7 @@ header.rolagem .whatsNav {
 
 header.rolagem .whatsNav:hover {
   transform: scale(1.3);
-  color: #ff6e3d;
+  color: #dab4d1;
 }
 
 
