--- a/src/components/HeaderBootstrap/index.css
+++ b/src/components/HeaderBootstrap/index.css
@@ -17,7 +17,7 @@ header{
 }
 
 header.rolagem{
-  background:#fff!important;
+  background:#202024!important;
   padding: 1px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
