--- a/src/components/HeaderBootstrap/index.css
+++ b/src/components/HeaderBootstrap/index.css
@@ -10,14 +10,14 @@ header{
   transition: 1s;
 
   @media (max-width: 800px) {
-    background:#fff!important;
+    background:#7C7C8A!important;
     padding: 0;
   }
   
 }
 
 header.rolagem{
-  background:#202024!important;
+  background:#29292E!important;
   padding: 1px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -57,7 +57,7 @@ header.rolagem #nav-links{
 
 header.rolagem #nav-links{
   text-shadow: none;
-  color: #0a3758;
+  color: #fff;
 }
 
 header.rolagem #nav-links:hover{  
@@ -74,8 +74,8 @@ header.rolagem #nav-links:hover{
   gap: 0.5rem;
   width: 12rem;
   height: 3rem;
-  border: 2px solid #fff;
-  border-radius: 15px;
+  /* border: 2px solid #fff;
+  border-radius: 15px; */
   color: #fff;
   text-shadow: 1px 1px 4px black;
   font-weight: bold;
@@ -92,8 +92,9 @@ header.rolagem #nav-links:hover{
 
 header.rolagem #btn{
   border: 1px solid #C4C4CC;
+  border-radius: 9px;
   text-shadow: none;
-  color: #0a3758;
+  color: #fff;
 }
 
 header.rolagem #btn:hover{
@@ -106,7 +107,7 @@ header.rolagem #btn:hover{
 }
 
 .whatsNav {
-  color: #ff9a3d;
+  color: #7C7C8A;
   text-shadow: 0px 0px 2px black;
   transition: all 0.2s ease-in-out;
 }
@@ -125,9 +126,6 @@ header.rolagem .whatsNav:hover {
   transform: scale(1.3);
   color: #dab4d1;
 }
-
-
-
 
 
 .banner {
