--- a/src/components/accordion/style.css
+++ b/src/components/accordion/style.css
@@ -5,7 +5,7 @@
   justify-content:center;
   align-itens:center;
   width:1000px;
-  gap: 2rem;
+  gap: 1rem;
   
 
   @media(max-width:999px){
@@ -50,12 +50,12 @@ span{
   border-left:none;
   border-right:none;
   border-bottom:2px solid #E1E1E6;
-  
+  font-size: 1.2rem;
 }
 
 .accordion-button {
   background-color: transparent !important;
-  
+  font-size: 1.2rem;
   color: #E1E1E6;
 }
 
@@ -64,6 +64,10 @@ span{
 }
 
 .accordion-button:not(.collapsed) {
-  color: #E1E1E6;
+  color: #fff;
 }
 
+.accordion-button:after { 
+  
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
