--- a/src/components/carrosel/index.css
+++ b/src/components/carrosel/index.css
@@ -1,5 +1,5 @@
 .carousel {
-  box-shadow: 10px 20px 50px -35px black;
+  box-shadow: 0 30px 50px -30px #fff;
 }
 
 .carousel .carousel-item {
@@ -45,18 +45,25 @@
   }
 }
 
-.carText h3, p {
+.carText p {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: left;
+}
+
+.carText h3 {
   font-size: 2rem;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
 }
 
 .desfoque {
   text-shadow: -2px 1px 2px black;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   flex-direction: column;
+  text-align:justify;
   gap:0.5rem;
 
   @media (min-width: 1441px) {
@@ -65,7 +72,7 @@
   }
 
   @media (max-width: 1441px) {
-    margin-left: 45rem;
+    margin-left: 35rem;
     padding-bottom:15rem;
   }
 
@@ -86,10 +93,10 @@
   align-items: center;
   text-shadow: 1px 1px 4px black;
   gap: 0.5rem;
-  width: 12rem;
+  width: 15rem;
   height: 3rem;
   border: 2px solid white;
-  border-radius: 15px;
+  border-radius: 5px;
   color: white;
   font-weight: bold;
   font-size:1.3rem;
@@ -99,7 +106,11 @@
 }
 
 .btn:hover {
-  transform: scale(1.1);
-  border: 3px solid white;
+  transform: scale(1.05);
+  border: 3px solid #dab4d1;
+  background-color: #0a3758;
+  color:  #dab4d1;
 }
 
+
+        
