--- a/src/components/accordion/style.css
+++ b/src/components/accordion/style.css
@@ -3,19 +3,15 @@
   display:flex;
   flex-direction:column;
   justify-content:center;
-  align-itens:center;
-  width:1000px;
+  max-width:1000px;
   gap: 1rem;
   
-
-  @media(max-width:999px){
-    width:400px;
-  }
 }
 
 .paddingTop{  
   padding-bottom: 5rem;
 }
+
 
 h2{
   font-family: 'Montserrat', sans-serif;
@@ -58,6 +54,8 @@ span{
   border-bottom:2px solid #E1E1E6;
   font-size: 1.2rem;
 }
+
+
 
 .accordion-button {
   background-color: transparent !important;
