--- a/src/components/HeaderBootstrap/index.css
+++ b/src/components/HeaderBootstrap/index.css
@@ -1,7 +1,5 @@
-
-
-header{
-  width:100%;
+header {
+  width: 100%;
   padding: 40px 4%;
   position: fixed;
   z-index: 3;
@@ -10,22 +8,22 @@ header{
   transition: 1s;
 
   @media (max-width: 800px) {
-    background:#7C7C8A!important;
+    background: #29292e !important;
     padding: 0;
+    .img {
+      width: 12rem;
+    }
   }
-  
 }
 
-header.rolagem{
-  background:#29292E!important;
+header.rolagem {
+  background: #29292e !important;
   padding: 1px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-header.rolagem #nav-links{
+header.rolagem #nav-links {
   /* text-shadow: -2px 1px 2px #fff; */
 }
-
-
 
 .containerCss {
   display: flex;
@@ -34,7 +32,6 @@ header.rolagem #nav-links{
   font-weight: bold;
   font-size: 1.1rem;
   gap: 2rem;
-  
 
   @media (min-width: 767px) {
     width: 60%;
@@ -42,7 +39,7 @@ header.rolagem #nav-links{
 }
 #nav-links {
   color: #fff;
-  font-size:1.4rem;
+  font-size: 1.4rem;
   text-shadow: 0px 0px 5px #0a3758;
   border-top: 3px solid transparent;
   border-bottom: 3px solid transparent;
@@ -55,13 +52,13 @@ header.rolagem #nav-links{
   border-bottom: 3px solid #0a3758;
 }
 
-header.rolagem #nav-links{
+header.rolagem #nav-links {
   text-shadow: none;
   color: #fff;
 }
 
-header.rolagem #nav-links:hover{  
-  color:#dab4d1;
+header.rolagem #nav-links:hover {
+  color: #dab4d1;
   border-top: 3px solid transparent;
   border-bottom: 3px solid #dab4d1;
 }
@@ -79,7 +76,7 @@ header.rolagem #nav-links:hover{
   color: #fff;
   text-shadow: 1px 1px 4px black;
   font-weight: bold;
-  font-size:1.2rem;
+  font-size: 1.2rem;
   background-color: #transparent;
   opacity: 0.9;
   transition: all 0.2s ease-in-out;
@@ -90,14 +87,14 @@ header.rolagem #nav-links:hover{
   border: 3px solid ff9a3d;
 }
 
-header.rolagem #btn{
-  border: 1px solid #C4C4CC;
+header.rolagem #btn {
+  border: 1px solid #c4c4cc;
   border-radius: 9px;
   text-shadow: none;
   color: #fff;
 }
 
-header.rolagem #btn:hover{
+header.rolagem #btn:hover {
   border: 1px solid #dab4d1;
   text-shadow: none;
   color: #dab4d1;
@@ -107,18 +104,18 @@ header.rolagem #btn:hover{
 }
 
 .whatsNav {
-  color: #7C7C8A;
+  color: #7c7c8a;
   text-shadow: 0px 0px 2px black;
   transition: all 0.2s ease-in-out;
 }
 
 .whatsNav:hover {
   transform: scale(1.3);
-  color: #7C7C8A;
+  color: #7c7c8a;
 }
 
 header.rolagem .whatsNav {
-  color: #7C7C8A;
+  color: #7c7c8a;
   transition: all 0.2s ease-in-out;
 }
 
@@ -127,13 +124,10 @@ header.rolagem .whatsNav:hover {
   color: #dab4d1;
 }
 
-
 .banner {
   background-image: url(../../src/assets/banner.png);
   background-position: center;
-  background-repeat:no-repeat;
-  background-size:cover;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 90vh;
-
-  
 }
