--- a/src/components/carrosel/index.css
+++ b/src/components/carrosel/index.css
@@ -14,6 +14,27 @@
   }
 }
 
+.carousel-control-prev {
+  @media (max-width: 800px) {
+    top: 45%;
+    width: 56px;
+  }
+  height: 26%;
+  top: 33%;
+  width: 86px;
+  color:transparent !important;
+}
+.carousel-control-next {
+  @media (max-width: 800px) {
+    top: 45%;
+    width: 56px;
+  }
+  height: 26%;
+  top: 33%;
+  width: 86px;
+  color:transparent !important;
+}
+
 .carousel-item img{
     position: absolute;
     object-fit: cover;
@@ -90,15 +111,21 @@
     padding-bottom:15rem;
   }
 
-  @media (max-width: 1200px) {
-    margin: 0;
-    padding: 0;
-    gap:0;
-    btn{
-      display: none;
-    }
+  @media (max-width: 1100px) {
+    margin-left: 25rem;
+    padding-bottom:17rem;
+  }
+
+  @media (max-width: 800px) {
+    margin-left: 5rem;
+    padding-bottom:3rem;
   }
   @media (max-width: 450px){
+    margin: 0;
+    gap:0;
+    a{
+      display: none;
+    }
     padding-bottom:2rem;
   }
 }
