--- a/src/components/PrePortfolio/pages/carouselNavigate/style.css
+++ b/src/components/PrePortfolio/pages/carouselNavigate/style.css
@@ -1,14 +1,144 @@
-#style{
-  padding-top:2rem;
-  @media(max-width:1100px){
-    display:none;
+
+
+.carouselContainer {
+  margin-bottom: -8rem;
+}
+
+.heading {
+  padding: 1rem;
+  font-size: 3.5rem;
+  text-align: center;
+}
+
+@media (min-width: 1200px) {
+  .swiper_container {
+    width:1200px;
+    height: 40rem;
+    position: relative;
+  }
+  .swiper-slide {
+    width: 28rem !important;
+    height: 31rem !important;
+    position: relative;
+  }
+  .swiper-slide img {
+    width: 22rem !important;
+    height: 31rem !important;
+    position: relative;
   }
 }
 
-#image{
-  width: 40rem;
+@media (max-width: 1200px) {
+  .swiper_container {
+    width:768px;
+    height: 40rem;
+    position: relative;
+  }
+  .swiper-slide {
+    width: 28rem !important;
+    height: 31rem !important;
+    position: relative;
+  }
+  .swiper-slide img {
+    width: 28rem !important;
+    height: 31rem !important;
+    position: relative;
+  }
 }
 
-.textSpace{
-  padding-top:2rem;
+@media (max-width: 500px) {
+  .swiper_container {
+    width:320px;
+    height: 31rem;
+  }
+  .swiper-slide {
+    width: 28rem !important;
+    height: 31rem !important;
+  }
+  .swiper-slide img {
+    width: 15rem !important;
+    height: 31rem !important;
+  }
+}
+
+.swiper-slide img {
+  
+}
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.slider-controler {
+  position: relative;
+  bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider-controler .swiper-button-next {
+  left: 58% !important;
+  transform: translateX(-58%) !important;
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-next {
+    left: 70% !important;
+    transform: translateX(-70%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-next {
+    left: 80% !important;
+    transform: translateX(-80%) !important;
+  }
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-prev {
+    left: 30% !important;
+    transform: translateX(-30%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-prev {
+    left: 20% !important;
+    transform: translateX(-20%) !important;
+  }
+}
+
+.slider-controler .slider-arrow {
+  background: var(--white);
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  left: 42%;
+  transform: translateX(-42%);
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.slider-controler .slider-arrow ion-icon {
+  font-size: 2rem;
+  color: #fff;
+}
+
+.slider-controler .slider-arrow::after {
+  content: '';
+}
+
+.swiper-pagination {
+  position: relative;
+  width: 15rem !important;
+  bottom: 1rem;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
 }
